hphp/hack/test/typecheck/tconst/access_expand_error_1.php
<?hh

class C {
  const type TC = int;
  public C::TC::ERROR $test = 0;
}
